# coba

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS  LICENSE  LICENSE.txt  README.md  TODO.txt  bandit_games.py  environment.yml  pyproject.toml  setup.py
.binder/: environment.yml
.github/workflows/: build-and-publish.yml  cache-mybinder-build.yml  codecov.yml  create-mybinder-cache.yml  mybinder-cache.yml  publish-to-test-pypi.yml  python.yml  test-doc-and-examples.yml  tests_and_coverage.yml  tests_sans_soft_dependencies.yml  tests_with_soft_dependencies.yml  unit-and-example-tests-with-code-coverage.yml  unit_and_example_tests_with_code_coverage.yml  unittest-and-coverage.yml  unittests-and-coverage.yml  unittests.yml
.test/: .gitignore
banditbenchmark/tests/: test_games.py
bbench/: benchmarks.py  games.py  learners.py  preprocessing.py  random.py  simulations.py  solvers.py  utilities.py
bbench/tests/: test_benchmarks.py  test_games.py  test_learners.py  test_preprocessing.py  test_rand.py  test_random.py  test_simulations.py  test_solvers.py  test_utilities.py
coba/: __init__.py  analysis.py  benchmarks.py  contexts.py  data.py  encodings.py  exceptions.py  execution.py  interactions.py  json.py  learners.py  multiprocessing.py  preprocessing.py  primitives.py  random.py  register.py  registry.py  rewards.py  safety.py  simulations.py  statistics.py  tools.py  typing.py  utilities.py  vowpal.py
coba/backport/: __init__.py  metadata.py
coba/backports/: __init__.py  metadata.py  typing.py
coba/benchmarks/: __init__.py  benchmarks.py  core.py  formats.py  results.py  tasks.py  transactions.py
coba/config/: __init__.py  cachers.py  core.py  exceptions.py  loggers.py
coba/context/: __init__.py  cachers.py  core.py  loggers.py
coba/contexts/: __init__.py  cachers.py  core.py  loggers.py
coba/data/: definitions.py  encoders.py  filters.py  pipes.py  sinks.py  sources.py  statistics.py  structures.py
coba/environments/: __init__.py  banditreplay.py  core.py  definitions.py  environments.py  filters.py  formats.py  openml.py  pipes.py  primitives.py  results.py  serialized.py  simple.py  simulations.py  supervised.py  synthetics.py  templates.py
coba/evaluators/: __init__.py  offline.py  online.py  primitives.py  sequential.py
coba/experiments/: __init__.py  core.py  formats.py  process.py  results.py  tasks.py  transactions.py
coba/learners/: __init__.py  bandit.py  core.py  corral.py  linUCB.py  lints.py  linucb.py  misguided.py  primitives.py  regCB.py  safety.py  utilities.py  vowpal.py
coba/pipes/: __init__.py  core.py  filters.py  io.py  lines.py  multiprocessing.py  primitives.py  readers.py  rows.py  sinks.py  sources.py  utilities.py
coba/primitives/: __init__.py  feedbacks.py  multiprocessing.py  rewards.py  rows.py  semantic.py  types.py
coba/results/: __init__.py  core.py  errors.py
coba/simulations/: __init__.py  core.py  edits.py  filters.py  openml.py  pipes.py  rewards.py  simulations.py
coba/tests/: hard_requirements.txt  requirements-soft.txt  requirements-test.txt  requirements.txt  soft_dependencies.txt  test_benchmarks.py  test_benchmarks_core.py  test_benchmarks_formats.py  test_benchmarks_results.py  test_benchmarks_tasks.py  test_benchmarks_transactions.py  (+98 more)
doc/: README.md  requirements.txt
docs/: README.md  requirements.txt
examples/: .coba  README.md  bakeoff.ipynb  bakeoff.json  bakeoff.py  bakeoff1.ipynb  benchmark_long.json  benchmark_short.json  covtype.py  environment.yml  plotting.py  requirements.txt  simple_benchmarks.py  vowpal.py
tests/: dummy_test.py  requirements.txt  test_bandit_games.py  test_games.py
(+260 files in other folders)
