[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coba", "coba.environments", "coba.learners", "coba.evaluators", "coba.experiments", "coba.pipes", "coba.contexts", "coba.backports", "coba.primitives"]

[project]
name = "coba"
version = "6.5.0"
authors = [
    {name = "Mark Rucker", email = "rucker.mark@gmail.com"},
]
description = "A contextual bandit research package"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    'requests>=2',
    'importlib-metadata>=1.0;python_version<"3.8"',
    'typing-extensions>=4.1,<4.2;python_version<"3.8"'
]

[project.urls]
Homepage = "https://github.com/vowpalwabbit/coba"

[project.entry-points."coba.register"]
coba = "coba.register"

[project.optional-dependencies]
full = [
    "vowpalwabbit",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "numpy",
    "scipy"
]
