[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coba", "coba.environments", "coba.learners", "coba.evaluators", "coba.experiments", "coba.pipes", "coba.context", "coba.contexts", "coba.backports", "coba.primitives"]

[tool.setuptools.dynamic]
version = {attr = "coba.__version__"}

[project]
name = "coba"
dynamic = ["version"]
authors = [
    {name = "Mark Rucker", email = "rucker.mark@gmail.com"},
]
description = "A contextual bandit research package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    'requests>=2',
]

[project.urls]
Homepage = "https://github.com/vowpalwabbit/coba"

[project.entry-points."coba.register"]
coba = "coba.register"

[project.optional-dependencies]
full = [
    "vowpalwabbit",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "cloudpickle"
]
