[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coba", "coba.environments", "coba.learners", "coba.evaluators", "coba.experiments", "coba.pipes", "coba.context", "coba.results"]

[tool.setuptools.dynamic]
version = {attr = "coba.__version__"}

[project]
name = "coba"
dynamic = ["version"]
authors = [
    {name = "Mark Rucker", email = "rucker.mark@gmail.com"},
]
description = "A contextual bandit research package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://coba-docs.readthedocs.io/"
Documentation = "https://coba-docs.readthedocs.io/"
Repository = "https://github.com/vowpalwabbit/coba"

[project.entry-points."coba.register"]
coba = "coba.register"

[project.optional-dependencies]
full = [
    "vowpalwabbit",
    "pandas",
    "matplotlib",
    "numpy",
    "scipy",
    "cloudpickle",
    "torch"
]
